[package]
name = "example-custom-header-node"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
reth.workspace = true
reth-chainspec.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-payload-builder.workspace = true
reth-basic-payload-builder.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-engine-local.workspace = true
reth-node-ethereum = { workspace = true, features = ["test-utils"] }
reth-tracing.workspace = true
reth-transaction-pool.workspace = true
reth-trie-db.workspace = true
reth-chain-state.workspace = true
alloy-genesis.workspace = true
alloy-rpc-types = { workspace = true, features = ["engine"] }
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true

alloy-sol-macro = "0.8.9"
alloy-sol-types.workspace = true
reth-evm.workspace = true

eyre.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
