[package]
name = "example-custom-node"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types = { workspace = true, features = ["engine"] }
alloy-sol-macro = "0.8.9"
alloy-sol-types.workspace = true
alloy-rlp.workspace = true
eyre.workspace = true
reth-basic-payload-builder.workspace = true
reth-codecs.workspace = true
reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-engine-local.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-evm.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-node-ethereum = { workspace = true, features = ["test-utils"] }
reth-payload-builder.workspace = true
reth-tracing.workspace = true
reth-transaction-pool.workspace = true
reth-trie-db.workspace = true
reth.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
